# iai_control_pkgs

./: .gitignore  CMakeLists.txt  README.md  SVN_EXPORT  controller_plugins.xml  loopback_controller_manager.cpp  manifest.xml
dynamic_robot_model_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
dynamic_robot_model_rviz_plugin/src/: dynamic_robot_model.cpp  dynamic_robot_model.h
dynamic_robot_state_publisher/: CMakeLists.txt  package.xml
dynamic_robot_state_publisher/include/dynamic_robot_state_publisher/: dynamic_robot_state_publisher.h  joint_state_listener.h
dynamic_robot_state_publisher/launch/: dynamic_robot_state_publisher.launch
dynamic_robot_state_publisher/src/: dynamic_robot_state_publisher.cpp  joint_state_listener.cpp
dynamic_robot_state_publisher/srv/: AlterUrdf.srv
iai_control_pkgs/: package.xml
iai_control_utils/: CMakeLists.txt  package.xml
iai_control_utils/scripts/: joint_p_ctrl.py  separate_joint_states.py
iai_ft_utils/: CMakeLists.txt  manifest.xml  package.xml
iai_ft_utils/launch/: pr2-left-arm-wrench-stamper.launch
iai_ft_utils/src/iai_ft_utils/: wrench_stamper.cpp
iai_naive_kinematics_sim/: CMakeLists.txt  LICENSE  README.md  package.xml
iai_naive_kinematics_sim/include/iai_naive_kinematics_sim/: iai_naive_kinematics_sim.hpp  simulator.hpp  system.hpp  utils.hpp  watchdog.hpp
iai_naive_kinematics_sim/launch/: pr2.launch  test_sim.launch
iai_naive_kinematics_sim/src/iai_naive_kinematics_sim/: velocity_resolved_sim.cpp
iai_naive_kinematics_sim/test/iai_naive_kinematics_sim/: main.cpp  simulator.cpp  system.cpp  watchdog.cpp
iai_naive_kinematics_sim/test_data/: controlled_joints.yaml  pr2.urdf  pr2_controlled_joints.yaml  start_config.yaml  test_robot.urdf
iai_pr2_velocity_controllers_relay/: CMakeLists.txt  manifest.xml
iai_robot_mechanism_controllers/: CMakeLists.txt  README  controller_plugins.xml  package.xml
iai_robot_mechanism_controllers/config/: pr2_multi_vel.yaml
iai_robot_mechanism_controllers/include/iai_robot_mechanism_controllers/: multi_joint_velocity_impedance_controller.h
iai_robot_mechanism_controllers/launch/: pr2_cart_twist.launch  pr2_loopback.launch  pr2_multi_vel_load.launch  pr2_multi_vel_spawn.launch  pr2_multi_vel_started.launch  rosie_loopback.launch  rosie_multi_vel.yaml
iai_robot_mechanism_controllers/src/: multi_joint_velocity_controller.cpp  multi_joint_velocity_impedance_controller.cpp  rosie_odometry.cpp
iai_ros_controllers/: CMakeLists.txt  package.xml
iai_ros_controllers/include/iai_ros_controllers/: MultiJointVelocityImpedanceController.h
iai_ros_controllers/scripts/: cmd_arm_vel_imp.py  cmd_arm_vel_imp_single.py
iai_ros_controllers/src/iai_ros_controllers/: MultiJointVelocityImpedanceController.cpp
iai_rosbag_utils/: CMakeLists.txt  README  manifest.xml  package.xml
iai_rosbag_utils/launch/: equipment_restamper.launch  human_equipment_restamper.launch  human_restamper.launch  human_visualizer.launch  pr2_fingertip_restamper.launch  pr2_joint_state_restamper.launch  tf_ledger.launch  tf_repeater.launch  tf_restamper.launch
iai_rosbag_utils/src/: rename_topic.py
iai_rosbag_utils/src/iai_rosbag_utils/: equipment_restamper.cpp  human_restamper.cpp  human_visualizer.cpp  joint_state_restamper.cpp  pr2_fingertip_restamper.cpp  tf_ledger.cpp  tf_repeater.cpp  tf_restamper.cpp
iai_tf_relay/: CMakeLists.txt  manifest.xml
iai_tf_relay/launch/: tf_relay.launch
iai_tf_relay/src/: tf_relay.cpp
iai_velocity_controller_demux/: CMakeLists.txt  manifest.xml
iai_velocity_controller_demux/launch/: pr2_arm_velocity_controller_demux.launch
iai_visualisation/: CMakeLists.txt  manifest.xml
iai_visualisation/launch/: equipment_visualisation.launch  human_visualisation.launch  human_visualizer.launch
iai_visualization/: CMakeLists.txt  README  manifest.xml  package.xml
iai_visualization/launch/: equipment_visualization.launch  human_visualization.launch  visualization.launch  visualization_rosbag.launch
iai_visualization/src/iai_visualization/: equipment_visualization.cpp  human_visualization.cpp
ias_mechanism_controllers/: README
ias_mechanism_controllers/launch/: pr2_multi_vel_started.launch  rosie_multi_vel.yaml
ias_mechanism_controllers/src/: rosie_odometry.cpp
include/ias_mechanism_controllers/: kimp_fake_odometry.h  multi_joint_velocity_controller.h  rosie_odometry.h
kdl_arm_kinematics/: CMakeLists.txt  manifest.xml  package.xml
launch/: pr2_cart_twist.launch  pr2_cart_twist.yaml  pr2_cartesian_twist_controllers.launch  pr2_loopback.launch  pr2_loopback_no_controllers.launch  pr2_multi_vel.yaml  pr2_multi_vel_load.launch  pr2_multi_vel_spawn.launch  rosie_loopback.launch
loopback_controller_manager/: CMakeLists.txt  loopback_controller_manager.cpp  manifest.xml  package.xml
loopback_controller_manager/launch/: pr2_loopback_no_controllers.launch
loopback_controller_manager_examples/: package.xml
loopback_controller_manager_examples/config/: pr2_pouring_sim.rviz  pr2_pouring_sim_start_config.yaml
loopback_controller_manager_examples/launch/: pr2_default_controllers.launch  pr2_loopback_no_controllers.launch  pr2_pouring_sim.launch  pr2_single_joint_controllers.launch  pr2_standard_arm_controllers.launch  pr2_velocity_resolved_controllers.launch
src/: multi_joint_velocity_controller.cpp  rosie_odometry.cpp
urdf_management/: CMakeLists.txt  README.md  package.xml  urdf-management.asd
urdf_management/scripts/: urdf_management_service  urdf_management_service.lisp
urdf_management/src/: package.lisp  server.lisp  service.lisp
urdf_management/srv/: AlterUrdf.srv
urdf_management_tutorial/: CMakeLists.txt  README.md  package.xml  urdf-management-tutorial.asd
urdf_management_tutorial/rosinstall/: sample.rosinstall
urdf_management_tutorial/scripts/: add_spatula  add_spatula.lisp  move_arm  move_arm.lisp  move_arm.py  remove_left_gripper  remove_left_gripper.lisp  remove_spatula  remove_spatula.lisp
urdf_management_tutorial/src/: package.lisp  test-calls.lisp  test-movements.lisp
(+7 files in other folders)
