<package>
  <name>dynamic_robot_state_publisher</name>
  <version>0.0.0</version>
  <description>
    Reads the latest urdf description from a topic and publishes frames for each robot link.
  </description>

  <author email="jannikbu@cs.uni-bremen.de">Jannik Buckelo</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend version_gte="1.3.0">orocos_kdl</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend version_gte="1.3.0">orocos_kdl</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
