<package>
  <name>iai_ft_utils</name>
  <version>0.0.0</version>
  <description>
     Collection of tools to visualize and setup up
     force/torque-controlled robot manipulation.
  </description>


  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
