<?xml version="1.0"?>
<package format="2">
  <name>iai_naive_kinematics_sim</name>
  <version>0.0.1</version>
  <description>
	  A set of naive robot kinematics simulators for ROS. Main intention was light-weight.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <test_depend>gtest</test_depend>

</package>
