<package>
  <name>iai_rosbag_utils</name>
  <version>0.0.0</version>
  <description>
    A collection of tools helping with using rosbags.
  </description>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>saphari_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>saphari_msgs</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
