<?xml version="1.0"?>
<package>
  <name>urdf_management_tutorial</name>
  <version>0.1.0</version>
  <description>
    "Tutorial for the urdf_management"
  </description>
  
  <author email="jannikbu@cs.uni-bremen.de">Jannik Buckelo</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
